v2.0.x/connectors/database/exasol.mdx
---
title: Exasol Connector | OpenMetadata High-Performance Database
description: Connect Exasol database to OpenMetadata with our comprehensive connector guide. Step-by-step setup, configuration, and metadata extraction instructions.
sidebarTitle: Overview
---
import { ConnectorDetailsHeader } from '/snippets/components/ConnectorDetailsHeader/ConnectorDetailsHeader.jsx'
import MetadataAgentDatabase from '/snippets/connectors/metadata-agent/database.mdx'
import Related from '/snippets/v2.0.x/connectors/database/related.mdx'

<ConnectorDetailsHeader
icon='/public/images/connectors/exasol.webp'
name="Exasol"
stage="PROD"
availableFeatures={["Metadata", "Lineage", "Column-level Lineage", "Query Usage"]}
unavailableFeatures={["Data Profiler", "Data Quality", "Owners", "dbt", "Tags", "Stored Procedures", "Sample Data", "Auto-Classification"]} />
In this section, we provide guides and references for using the Exasol connector.
Configure and schedule Exasol metadata workflows from the OpenMetadata UI:
- [Requirements](#requirements)
- [Metadata Ingestion](#metadata-ingestion)
- [Lineage](/v2.0.x/connectors/ingestion/lineage)
- [Query Usage](/v2.0.x/connectors/ingestion/workflows/usage)
- [Troubleshooting](/v2.0.x/connectors/database/exasol/troubleshooting)

## Requirements

Note that we support an Exasol database version 8 or later. Ensure your Exasol instance meets this minimum version requirement before proceeding.

### Metadata

To ingest basic metadata, an Exasol user must have the following privileges:
  - `USAGE` privilege on the schema
  - `SELECT` privilege on the tables

For more information, see the [Exasol Privileges page](https://docs.exasol.com/db/latest/database_concepts/privileges.htm).

Use the following SQL commands to grant these privileges to the OpenMetadata ingestion user:

```sql
GRANT USAGE ON <schema_name> TO <ingestion_username>;
GRANT SELECT ON TABLE <schema_name>.<table_name> TO <ingestion_username>;
```

Alternatively, grant privileges to allow access to all schemas and tables:

```sql
GRANT USE ANY SCHEMA TO <ingestion_username>;
GRANT SELECT ANY TABLE TO <ingestion_username>;
```
<Tip>
Use these broader privileges only when access to all schemas and tables is intended. `SELECT ANY TABLE` does not include system tables; the lineage & query usage workflows still require `SELECT ANY DICTIONARY`.
</Tip>

### Lineage & Query Usage

For the lineage & query usage workflows, OpenMetadata fetches query logs by querying
`EXA_STATISTICS.EXA_DBA_AUDIT_SQL` and joining with `EXA_STATISTICS.EXA_DBA_AUDIT_SESSIONS`.
To access these system tables, an Exasol user must have the `SELECT ANY DICTIONARY` system
privilege, and auditing must be enabled on the database. For more information about Exasol auditing, see
[Auditing](https://docs.exasol.com/db/latest/database_concepts/auditing.htm#Implementation).

Grant the required system privilege to the OpenMetadata ingestion user:

```sql
GRANT SELECT ANY DICTIONARY TO <ingestion_username>;
```

## Metadata Ingestion

To ingest metadata from Exasol, you need to create a service connection. The service connects Exasol with OpenMetadata. Once you create a service, OpenMetadata automatically starts ingesting metadata.

### Step 1: Add New Service

1. Navigate to **Settings** > **Services**.

   <img src="/public/images/connector2.0/metadata-ingestion/access-services.png" alt="Navigate to Settings and Services" />

2. Click **Add New Service**.

   <img src="/public/images/connector2.0/metadata-ingestion/add-new-service.png" alt="Add New Service" />

### Step 2: Select a Service and Connector

From the service type dropdown, select **Database Services**, then click the **Exasol** connector tile.

![Select Service](/public/images/connector2.0/metadata-ingestion/Database/select-service/exasol.png)

### Step 3: Add Service Name and Description

- Enter a unique, descriptive **Service Name**. OpenMetadata identifies services by their service name. Enter a name that distinguishes this deployment from other Exasol services you are ingesting metadata from.
- Optional: Enter a **Description** for the service.

![Configure Service](/public/images/connector2.0/metadata-ingestion/Database/service-name/exasol.png)

<Note>
**Note**: The service name cannot be changed after it is set.
</Note>

### Step 4: Configure Connection Options

Specify your source credentials and verify the connection.

#### Enter Connection Details

Enter the connection details for Exasol. The right-hand panel in the UI displays inline help for each field.

![Configure Service Connection](/public/images/connector2.0/metadata-ingestion/Database/connection-details/exasol.png)

- **Connection Scheme**: Specifies the SQLAlchemy driver scheme options required to connect to Exasol.
- **Username**: The username used to connect to the Exasol database. Ensure that this user has sufficient privileges to read all the metadata from Exasol.
- **Password**: The password associated with the user connecting to Exasol.
- **Host and Port**: Defines the host and port of the Exasol instance. Provide this as a string in the format `hostname:port`. For example: `localhost:8563`
  - If running the OpenMetadata ingestion in a Docker container and your services are hosted on `localhost`, use `host.docker.internal:8563`.
- **SSL/TLS Settings**: Specifies the mode or settings for SSL/TLS validation during the connection. Available options:
  - **validate-certificate (Default)**: Enables Transport Layer Security (TLS) and validates the server certificate using system certificate stores.
  - **ignore-certificate**: Enables Transport Layer Security (TLS) but disables validation of the server certificate.
    <Tip>
    This mode should **never** be used in production. It is useful for testing with self-signed certificates.
    </Tip>
  - **disable-tls**: Disables Transport Layer Security (TLS). Data is sent in plain text (no encryption).
    <Tip>
    This mode should **never** be used in production and should only be used in debugging scenarios.
    </Tip>

#### Test Connection

Once the credentials have been added, click on **Test Connection** and **Save** the changes.

<img src="/public/images/connectors/test-connection.png" alt="Test Connection" />

### Step 5: Configure Ingestion Options

In the **What to Ingest** step, use filter patterns to control which assets OpenMetadata ingests from your database service. Filter patterns use regular expressions applied to asset names.

#### How Filter Patterns Work

- **Include**: Add one or more comma-separated regular expressions. OpenMetadata ingests only assets whose names match at least one expression. Leave blank to include all assets.
- **Exclude**: Add one or more comma-separated regular expressions. OpenMetadata skips any asset whose name matches an expression. Leave blank to exclude nothing.

Rules match asset names using one of five expressions:

- **contains**: matches any name containing the value. For example, `sales` matches `my_sales_data` and `sales_2024`.
- **starts with**: matches names beginning with the value. For example, `prod_` matches `prod_db` and `prod_schema`.
- **ends with**: matches names ending with the value. For example, `_raw` matches `events_raw` and `logs_raw`.
- **is exactly**: matches the exact name only. For example, `analytics` matches only `analytics`.
- **matches regex**: matches names using a regular expression. For example, `^prod_.*_v\d+$` matches `prod_events_v1`.

When both Include and Exclude are set, Exclude takes priority.

<Tip>
Leave all filter patterns empty to ingest all databases, schemas, and tables available in the source.
</Tip>

**Filter Options**

The Database, Schema, and Table sections each include the following filter options:

- **Database**: Controls which databases OpenMetadata ingests from the source.
- **Schema**: Controls which schemas within the ingested databases are included.
- **Table**: Controls which tables and views within the ingested schemas are included.

Each section provides the following controls:

- **Scan Mode**: You can choose between the following scan modes:
    - **Scan all**: Ingests every asset of that type the connector can access. This is the default.
    - **Only specific**: Enables include rules so only assets matching at least one rule are ingested.
- **Exclude system toggle**: Use this toggle to automatically filter out system-reserved names defined by the connector, for example, **Exclude system databases** for the Databases section.
- **Always exclude**: Add permanent exclusion rules (shown in red). Assets matching these rules are never ingested, regardless of include rules.
- **Preview**: Shows a real-time summary of what will be in scope based on your current rules.
- **Include rules** *(available only in **Only specific** mode)*: Click **+ Add** to define a rule. Added rules appear as chips; an asset is included if it matches any rule.

### Step 6: Create & Deploy

Click **Create & Deploy** to deploy the agent and start the first metadata ingestion run. OpenMetadata saves the service configuration and immediately begins pulling metadata from the source.

To monitor ingestion progress or view the service you just added, go to **Settings** > **Services** and select your service.

## Configure Metadata Agent and Schedule Ingestion

<MetadataAgentDatabase />

<Related />
